--- a/index.html
+++ b/index.html
@@ -147,11 +147,14 @@
                         practice problems, visual calculators, and interactive Monte Carlo simulations.
                     </p>
                     <div class="hero-buttons">
-                        <button class="glow-btn" onclick="showPage('theory')">
-                            <i class="fas fa-book-open"></i> <span data-i18n="btn_start">Start Learning</span>
+                        <button class="glow-btn large" onclick="showPage('theory')">
+                            <i class="fas fa-book-open"></i> <span data-i18n="btn_start">Սկսել ուսուցումը</span>
                         </button>
-                        <button class="glow-btn secondary" onclick="showPage('simulations')">
-                            <i class="fas fa-play-circle"></i> <span data-i18n="btn_try_sims">Try Simulations</span>
+                        <button class="glow-btn secondary large" onclick="showPage('simulations')">
+                            <i class="fas fa-flask"></i> <span data-i18n="btn_try_sims">Փորձարկել սիմուլյացիաները</span>
+                        </button>
+                        <button class="glow-btn ai-speech-btn large" id="intro-speech-btn" onclick="playAIGuide('intro')">
+                            <i class="fas fa-robot"></i> <span data-i18n="btn_ai_guide">Լսել AI Ուղեցույցին</span>
                         </button>
                     </div>
                 </div>
