--- a/index.html
+++ b/index.html
@@ -447,17 +447,18 @@
                         </h3>
                         <select id="formula-select" class="ai-select" style="width:100%; margin-bottom:15px;"
                             onchange="renderFormulaInputs()">
-                            <option value="">-- Select Formula --</option>
-                            <option value="bernoulli">Bernoulli Formula</option>
-                            <option value="bayes">Bayes' Theorem</option>
-                            <option value="combinations">Combinations (C_n^k)</option>
-                            <option value="permutations">Permutations (P_n)</option>
-                            <option value="normal_calc">Normal Dist (Z-Table)</option>
-                            <option value="poisson">Poisson Approx</option>
+                            <option value="" data-i18n="calc_formula_sel">-- Select Formula --</option>
+                            <option value="bernoulli" data-i18n="formula_bernoulli">Bernoulli Formula</option>
+                            <option value="bayes" data-i18n="formula_bayes">Bayes' Theorem</option>
+                            <option value="combinations" data-i18n="formula_combinations">Combinations (C_n^k)</option>
+                            <option value="permutations" data-i18n="formula_permutations">Permutations (P_n)</option>
+                            <option value="normal_calc" data-i18n="formula_normal">Normal Dist (Z-Table)</option>
+                            <option value="poisson" data-i18n="formula_poisson">Poisson Approx</option>
                         </select>
                         <div id="formula-inputs" style="margin-bottom:15px;"></div>
-                        <button class="glow-btn small" onclick="solveFormulaWithSteps()" style="width:100%"><i
-                                class="fas fa-lightbulb"></i> Solve</button>
+                        <button class="glow-btn small" onclick="solveFormulaWithSteps()" style="width:100%">
+                            <i class="fas fa-lightbulb"></i> <span data-i18n="btn_solve">Solve</span>
+                        </button>
                         <div id="formula-steps"
                             style="margin-top:15px; background:var(--bg-input); padding:15px; border-radius:12px; border:1px solid var(--glass-border); font-family:'Fira Code', monospace; font-size:0.88rem; color:var(--text-primary);">
                         </div>
